--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -54,7 +54,7 @@
                     <!-- LOGIN BUTTONS -->
                     <div class="log-footer">
                         <div class="forgot"><a href="#">Forgot Password?</a></div>
-                        <a href="index.html" class="btn btn-default">Cancel</a>&nbsp;&nbsp;
+                        <a href="/" class="btn btn-default">Cancel</a>&nbsp;&nbsp;
                         <input type="submit" value="Login" class="btn btn-info">
                     </div>
                 </form>
