--- a/views/search/results.ejs
+++ b/views/search/results.ejs
@@ -42,5 +42,6 @@
             <% }) %>
             </tbody>
         </table>
+        <a href="/search?search=<%= data.search %>&page=<%= data.page %>">next</a>
         <% } %>
     </div>
