--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -165,17 +165,17 @@
                                 </div>
                             </div>
                         </div>
+                        <% if(req.session.authenticated) { %>
                         <div class="btn-group">
-                            <a class="con" href="" data-toggle="dropdown"><span class="fa fa-envelope"></span></a>
-                            <% if(req.session.authenticated) { %>
+                            <a class="con" href="#" data-toggle="dropdown"><span class="fa fa-envelope"></span></a>
                             <div class="dropdown-menu pull-right" role="menu">
                                 <% _.each(req.session.user.receivedMessage, function(message){ %>
                                     <div class="drop-item">
-                                        <div class="drop-icon font-unread"><span class="fa fa-envelope-o"></span></div>
+                                        <div class="drop-icon font-<% if(message.read = 0) { %>un<% } %>read"><span class="fa fa-envelope-o"></span></div>
                                         <div class="drop-info">
                                             <div class="drop-content"><%= message.subject %></div>
-                                            <div class="drop-description">User: <%= message.senderId %></div>
-                                            <div class="drop-time"><%= message.createdAt %></div>
+                                            <div class="drop-description">User #<%= message.senderId %></div>
+                                            <div class="drop-time"><%= new Date(message.createdAt) %></div>
                                         </div>
                                     </div>
                                 <% }); %>
@@ -186,8 +186,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <% } %>
                         </div>
+                        <% } %>
                         <div class="btn-group">
                             <a class="con" href="" data-toggle="dropdown"><span class="fa fa-user"></span></a>
                             <ul class="dropdown-menu pull-right" role="menu">
