--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,20 +3,16 @@ img.cardImage {
     border-radius:13px;
     -webkit-border-radius:13px;
     -moz-border-radius:13px;
+    float: left;
+    overflow: hidden;
 }
 img.cardThumb {
     height: 75px;
 }
-.imageContainer {
-    float: left;
-    width: 50%;
-}
 .cardInfo {
     float: right;
+    overflow: hidden;
     width: 50%;
-}
-form {
-    float: clear;
 }
 
 @media screen and (max-width: 600px) {
@@ -25,8 +21,18 @@ form {
         width: 100%;
     }
     img.cardImage {
+        float: none;
         display: block;
         margin-left: auto;
         margin-right: auto;
     }
+}
+.wdgt-body {
+    overflow: auto;
+}
+.listForm {
+    margin-top: 50;
+    margin-left: auto;
+    margin-right: auto;
+    clear: both;
 }
