--- a/views/message/findOne.ejs
+++ b/views/message/findOne.ejs
@@ -16,7 +16,7 @@
             <tbody>
                 <tr>
                     <td>
-                        From: <%= data.sender.username %>
+                        From: <a href="/user/<%= data.sender.id %>"><%= data.sender.username %></a>
                     </td>
                 </tr>
                 <tr>
