--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
 Magic Site &mdash; Hello World<br />
-<li><a href="<%= sails.getBaseurl() %>/card?sort=name">Full Card List</a></li>
-<li><a href="<%= sails.getBaseurl() %>/set">Full Set List</a></li>
+<li><a href="<%= sails.getBaseurl() %>/card?sort=name&limit=25">Full Card List</a></li>
+<li><a href="<%= sails.getBaseurl() %>/set?limit=25">Full Set List</a></li>
 <li><a href="<%= sails.getBaseurl() %>/search">Search for a Card</a></li>
