--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -47,7 +47,7 @@
         <div class="left hidden-xs">
             <div class="sidebar">
                 <form role="form" action="/search" method="post">
-                    <input class="typeahead" type="text" name="search" placeholder="Search...">
+                    <input class="typeahead" type="text" name="search" placeholder="Search..." <% if(req.param('search')) { %> value="<%= req.param('search') %><% } %>">
                     <span id="search-icon" class="glyphicon glyphicon-search"></span>
                     <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
                 </form>
