--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -74,7 +74,7 @@
                                 <a href="/haveList?user=<%= req.session.user.id %>" class="sbtn">
                                     <span class="fa fa-archive"></span>Collection
                                 </a>
-                                <a href="buttons.html" class="sbtn">
+                                <a href="/trade/myTrades?user=<%= req.session.user.id %>" class="sbtn">
                                     <span class="fa fa-book"></span>Trades
                                 </a>
                                 <a href="/wantList?user=<%= req.session.user.id %>" class="sbtn">
