--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,6 +14,11 @@ img.cardThumb {
     overflow: hidden;
 }
 
+.tradeAccept {
+    float: left;
+    overflow: hidden;
+}
+
 @media screen and (max-width: 600px) {
     .cardInfo {
         margin: 20px 0;
