--- a/views/card/find.ejs
+++ b/views/card/find.ejs
@@ -4,8 +4,8 @@
             There are no results for your search
         <% } else { %>
         <% if(req.param('skip')) { %>
-            <a href="/card?sort=name&limit=25<% if(req.param('skip') > 25) { %>&skip=<%= (+req.param('skip')) - 25 %><% } %>">Prev</a><% } %>
-        <a href="/card?sort=name&limit=25&skip=<% if(req.param('skip')) { %><%= (+req.param('skip')) + (+25) %><% } else { %>25<% } %>">Next</a>
+            <a href="/card?sort=name&limit=25<% if(req.param('skip') > 25) { %>&skip=<%= (+req.param('skip')) - 25 %><% } %><% if(req.param('set')) { %>&set=<%= req.param('set') %><% } %>">Prev</a><% } %>
+        <a href="/card?sort=name&limit=25&skip=<% if(req.param('skip')) { %><%= (+req.param('skip')) + (+25) %><% } else { %>25<% } %><% if(req.param('set')) { %>&set=<%= req.param('set') %><% } %>">Next</a>
         <hr>
         <table class="table table-striped">
             <thead>
