angular and css

--- a/views/layout-old.ejs
+++ b/views/layout-old.ejs
@@ -122,6 +122,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/flot/jquery.flot.min.js"></script>
     <script src="/js/flot/jquery.flot.pie.min.js"></script>
