--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -332,6 +332,7 @@
     </div>
 
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.min.js"></script>
 
     <!-- Default JS (DO NOT TOUCH) -->
     <script src="/js/jquery.min.js"></script>
